# Flowmo

./: DEVPLAN.md  README.md  dev.bat  index.html  package.json  pnpm-lock.yaml  report.md  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/chat/: ToolResultCard.vue
src/components/common/: SearchPanel.vue
src/components/layout/: Sidebar.vue  Titlebar.vue
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/router/: index.ts
src/services/: db.ts  stickyWindow.ts
src/services/ai/: context.ts  index.ts  openai-adapter.ts  store.ts  tools.ts  types.ts
src/stores/: countdown.ts  habits.ts  notepad.ts  notes.ts  pomodoro.ts  search.ts  settings.ts  todos.ts  trash.ts
src/views/Calendar/: index.vue
src/views/Chat/: index.vue
src/views/Countdown/: index.vue
src/views/HabitTracker/: index.vue
src/views/Notepad/: index.vue
src/views/Pomodoro/: index.vue
src/views/Settings/: index.vue
src/views/Stats/: index.vue
src/views/StickyNote/: FloatWindow.vue  index.vue
src/views/Todo/: index.vue
src/views/Trash/: index.vue
